# smart_scaffolding_gazebo

./: CMakeLists.txt  package.xml  setup.py
launch/: smart_scaffolding_gazebo.launch
scripts/: walker_demo.py
src/smart_scaffolding_gazebo/: phantomx.py
